feat: display chart with the evolution of the price of the day

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   shared_preferences: ^2.0.13
   get_it: ^7.2.0
   intl: ^0.17.0
+  syncfusion_flutter_charts: ^19.4.53
 
 dev_dependencies:
   flutter_test:
