--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   intl: ^0.17.0
   syncfusion_flutter_charts: ^19.4.53
   splash_screen_view: ^3.0.0
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
