--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,16 @@ dependencies:
   syncfusion_flutter_charts: ^19.4.53
   splash_screen_view: ^3.0.0
   shimmer: ^2.0.0
+  flutter_launcher_icons: ^0.9.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/ic_launcher.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
