--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bubulkapp.electricity_price">
    <application
-        android:label="electricity_price"
+        android:label="Precio Luz"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
