--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   splash_screen_view: ^3.0.0
   shimmer: ^2.0.0
   flutter_launcher_icons: ^0.9.2
+  stacked: ^2.2.8
 
 dev_dependencies:
   flutter_test:
