--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_local_notifications: ^9.7.0
   timezone: ^0.8.0
   flutter_native_timezone: ^2.0.0
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
