feat(badge): flutter app badge puckage added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   timezone: ^0.8.0
   flutter_native_timezone: ^2.0.0
   fluttertoast: ^8.0.9
+  flutter_app_badger: ^1.4.0
 
 dev_dependencies:
   flutter_test:
