--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,7 @@
 name: electricity_price
 description: A new Flutter project.
-
-# The following line prevents the package from being accidentally published to
-# pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+9
+version: 1.1.0+10
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -23,28 +9,32 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   shared_preferences: ^2.0.15
-  get_it: ^7.2.0
   intl: ^0.17.0
   syncfusion_flutter_charts: ^19.4.53
   splash_screen_view: ^3.0.0
   shimmer: ^2.0.0
   flutter_launcher_icons: ^0.9.2
-  stacked: ^2.2.8
   flutter_local_notifications: ^9.7.0
   timezone: ^0.8.0
   flutter_native_timezone: ^2.0.0
   fluttertoast: ^8.0.9
+  dio: ^4.0.6
+  json_serializable: ^6.4.0
+  json_annotation: ^4.7.0
+  retrofit: ^3.0.1+1
+  flutter_bloc: ^8.1.1
+  copy_with_extension: ^4.0.3
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.2.1
+  retrofit_generator: '>=4.0.0 <5.0.0'
+  copy_with_extension_gen: ^4.0.3
 
 flutter_icons:
   android: true
